--- a/LAVIS/lavis/projects/blip2/train/pretrain_stage1.yaml
+++ b/LAVIS/lavis/projects/blip2/train/pretrain_stage1.yaml
@@ -6,8 +6,8 @@
 model:
   arch: blip2
   model_type: pretrain
-  load_pretrained: False
-  # pretrained: "https://storage.googleapis.com/sfr-vision-language-research/LAVIS/models/BLIP2/blip2_pretrained_vitL.pth"
+  load_pretrained: True
+  pretrained: "https://storage.googleapis.com/sfr-vision-language-research/LAVIS/models/BLIP2/blip2_pretrained_vitL.pth"
   freeze_vit: True
   vit_model: clip_L
   vision_encoder_weights: clip # [clip, pmc-clip]
@@ -15,7 +15,7 @@ model:
 
 datasets:
   fundus:
-    summary_type: original # [original, pmc-llama, med42, gpt-4]
+    summary_type: gpt-4 # [original, pmc-llama, med42, gpt-4]
     max_words: 50
   # coco_caption:
   #   vis_processor:
@@ -58,7 +58,7 @@ run:
 
   seed: 42
   # output_dir: "../../../../../PRETRAIN_EXPS/Pretrain_Stage1"
-  output_dir: "PRETRAIN_EXPS/Pretrain_Stage1"
+  output_dir: "./PRETRAIN_EXPS/Pretrain_Stage1"
 
   amp: True
   resume_ckpt_path: null
